--- a/public/login-page.html
+++ b/public/login-page.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="h-screen w-[100%]">
         <form action="">
-            <input type="text" placeholder="">
-            <input type="text" placeholder="">
+            <input type="text" >
+            <input type="text">
         </form>
     </div>
 </body>
