--- a/public/login-page.html
+++ b/public/login-page.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="h-screen w-[100%]">
-        <form action="">
+    <div class="h-screen w-full]">
+        <form action="" class="w-[50%] h-fit py-2">
             <input type="text" >
             <input type="text">
         </form>
