--- a/public/login-page.html
+++ b/public/login-page.html
@@ -8,8 +8,8 @@
 <body>
     <div class="h-screen w-full]">
         <form action="" class="w-[50%] h-fit py-2">
-            <input type="text" >
-            <input type="text">
+            <input type="text" class="border-2 border-black">
+            <input type="text" class="border-2 border-black">
         </form>
     </div>
 </body>
