--- a/public/login-page.html
+++ b/public/login-page.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
-    <div class="h-screen w-full]">
-        <form action="" class="w-[50%] h-fit py-2">
-            <input type="text" class="border-2 border-black">
+    <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  justify-center items-center">
+        <form action="" class="w-[50%] h-[200px] py-2 flex flex-col gap-3 bg-gray-500">
+            <input type="text" class="border-2 border-black ">
             <input type="text" class="border-2 border-black">
         </form>
     </div>
