--- a/public/login-page.html
+++ b/public/login-page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  justify-center items-center">
-        <form action="" class="w-[50%] h-[200px] py-2 flex flex-col gap-3 bg-gray-500">
+        <form action="" class="w-[50%] h-[200px] py-2 bg-blue flex flex-col gap-3 bg-login ">
             <input type="text" class="border-2 border-black ">
             <input type="text" class="border-2 border-black">
         </form>
