--- a/public/login-page.html
+++ b/public/login-page.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  justify-center items-center">
-        <form action="" class="w-[50%] h-[200px] py-2 bg-blue flex flex-col gap-3 bg-login ">
-            <h1>Login</h1>
-            <input type="text" class="border-2 border-black" placeholder="Enter your email">
-            <input type="text" class="border-2 border-black" placeholder="Enter your password">
+        <form action="" class="w-[50%] h-[200px] py-2 bg-black flex flex-col gap-3 bg-login ">
+            <h1 class="text-center text-white text-4xl font-bold">Login</h1>
+            <input type="text" class="border-2 border-black text-white" placeholder="Enter your email">
+            <input type="text" class="border-2 border-black text-white" placeholder="Enter your password">
         </form>
     </div>
 </body>
