--- a/public/login-page.html
+++ b/public/login-page.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
-    <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  justify-center items-center">
-        <form action="" class="w-[50%] h-[200px] py-2 bg-black flex flex-col gap-3 bg-login ">
+    <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  justify-center items-center ">
+        <form action="" class="w-[30%] h-[450px]] py-2 bg-black flex flex-col gap-6 bg-login  border-2 py-[9%] border-white">
             <h1 class="text-center text-white text-4xl font-bold">Login</h1>
-            <input type="text" class="border-2 border-black text-white" placeholder="Enter your email">
-            <input type="text" class="border-2 border-black text-white" placeholder="Enter your password">
+            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your email    ">
+            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your password ">
+            <button class="text-black bg-white w-[80%] rounded-[10px] mx-auto font-bold py-1">submit</button>
         </form>
     </div>
 </body>
