--- a/public/login-page.html
+++ b/public/login-page.html
@@ -13,7 +13,7 @@
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your email    ">
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your password ">
             <button class="text-black bg-white w-[80%] rounded-[10px] mx-auto font-bold py-1">submit</button>
-            <h5>Don't have an account? Ragister</h5>
+            <h5 class="text-white font-bold ">Don't have an account? Ragister</h5>
         </form>
     </div>
 </body>
