--- a/public/login-page.html
+++ b/public/login-page.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
-    <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  justify-center items-center ">
-        <form action="" class="w-[30%] h-[450px]] py-2 bg-black flex flex-col gap-6 bg-login  border-2 py-[9%] border-white">
-            <h1 class="text-center text-white text-4xl font-bold">Login</h1>
+</html>
+<div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  bg-white items-center justify-center rounded-[13px] ">
+        <form action="" class="w-[30%] h-[450px]] py-2  flex  flex-col gap-6  bg-login border-2   py-[9%] border-white">
+            <h1 class="text-center text-black text-4xl font-bold">Login</h1>
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your email    ">
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your password ">
-            <button class="text-black bg-white w-[80%] rounded-[10px] mx-auto font-bold py-1">submit</button>
-            <h5 class="text-white font-bold mx-auto text-2xl">Don't have an account? Ragister</h5>
+            <button class="text-black bg-white  w-[80%] rounded-[10px] mx-auto font-bold py-1">submit</button>
+            <h5 class="text-white  font-bold mx-auto text-2xl">Don't have an account? Ragister</h5>
         </form>
     </div>
 </body>
