--- a/public/login-page.html
+++ b/public/login-page.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 </html>
-<div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  bg-white items-center justify-center rounded-[13px] ">
-        <form action="" class="w-[30%] h-[450px]] py-2  flex  flex-col gap-6  bg-login border-2   py-[9%] border-white">
+<div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  bg-white items-center justify-center ">
+        <form action="" class="w-[30%] h-[500px] py-2  flex  flex-col gap-6  bg-login  rounded-[15px] py-[5%] ">
             <h1 class="text-center text-white text-4xl font-bold">Login</h1>
-            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your email    ">
+            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px] text-[25px]" placeholder="Email    ">
            
-            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px]" placeholder="Enter your password ">
+            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[10px] pl-[12px] text-[25px]" placeholder="Password ">
            
-            <div class=" flex items-center justify-center text-white py-1">
-                <label> <input type="checkbox"> Remember me ! </label>
-                <a href="#"> Forgot password? </a>
+            <div class=" flex items-between justify-between text-white ">
+                <label> <input type="checkbox" class="ml-[20px]"> Remember me ! </label>
+                <a href="#" class="mr-[20px]"> Forgot password? </a>
             </div>
             <button class="text-black bg-white  w-[80%] rounded-[10px] mx-auto font-bold py-1">submit</button>
             <div class="text-white  font-bold mx-auto text-2xl"> 
