--- a/public/login-page.html
+++ b/public/login-page.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login-page</title>
     <link rel="stylesheet" href="../src/output.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 <body>
 </html>
 <div class="h-screen w-full bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right  flex  bg-white items-center justify-center ">
-        <form action="" class="w-[30%] h-[500px] py-2  flex  flex-col gap-6  bg-login  rounded-[15px] py-[5%] ">
+        <form action="" class="w-[30%] h-[500px] py-2  flex  flex-col gap-6  bg-login  rounded-[15px] py-[5%]  font-bold">
             <h1 class="text-center text-white text-4xl font-bold">Login</h1>
-            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px]" placeholder="Email">
+            <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px] " placeholder="Email">
            
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px]" placeholder="Password ">
            
@@ -20,7 +20,9 @@
                 <label> <input type="checkbox" class="ml-[20px]"> Remember me ! </label>
                 <a href="#" class="mr-[20px]"> Forgot password? </a>
             </div>
-            <button class="text-black bg-white  w-[80%] rounded-[30px] mx-auto font-bold py-1">submit</button>
+            <button class="text-black bg-white  w-[80%] rounded-[30px] mx-auto font-bold py-1">
+                <a href="dashbourd.html"></a>
+                Log in </button>
             <div class=" flex justify-between items-between  font-bold ml-[15px] text-xl text-white "> 
             <h5>Don't have an account ? </h5>
             <a href="#" class="mr-[20%] ml-[15px] text-[20px]" >Register</a>
