--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
-    <div class="">
-<div>
+    <div>
+<div class="h-16 w-full bg-gray-700 text-white">
 
 </div>
 <div>
