--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashbourd</title>
+    <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
     <div>
 <div class="h-16 w-full bg-gray-700 text-white">
+    <h2>Sharifi high School</h2>
+<i class="fas fa-bars"></i>
 
 </div>
 <div>
