--- a/public/login-page.html
+++ b/public/login-page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-page</title>
     <link rel="stylesheet" href="../src/output.css">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
 </head>
 <body>
 </html>
