--- a/public/login-page.html
+++ b/public/login-page.html
@@ -21,8 +21,8 @@
                 <a href="#" class="mr-[20px]"> Forgot password? </a>
             </div>
             <button class="text-black bg-white  w-[80%] rounded-[30px] mx-auto font-bold py-1">
-                <a href="dashbourd.html"></a>
-                Log in </button>
+                <a href="dashbourd.html">
+                Log in </a></button>
             <div class=" flex justify-between items-between  font-bold ml-[15px] text-xl text-white "> 
             <h5>Don't have an account ? </h5>
             <a href="#" class="mr-[20%] ml-[15px] text-[20px]" >Register</a>
