--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -8,19 +8,12 @@
     <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
-    <div>
-<div class="h-16 w-full bg-gray-700 text-white">
+    <div class="relative">
+<div class="h-16 w-full bg-gray-700 text-white flex justify-between leading-16 items-center px-4">
     <h2>Sharifi high School</h2>
 <i class="fas fa-bars"></i>
-
 </div>
-<div>
-
-
+<div class="h-screen w-[25%] bg-gray-700 absolute top-0 left-0" ></div>
 </div>
-
-
-
-    </div>
 </body>
 </html>
