--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="relative">
-<div class="h-16 w-full bg-gray-700 text-white flex justify-between leading-16 items-center px-4">
+<div id="hnav" class="h-16 w-full bg-gray-700 text-white flex justify-between leading-16 items-center px-4">
     <h2>Sharifi high School</h2>
-<i class="fas fa-bars"></i>
+<i id="bars" class="fas fa-bars"></i>
 </div>
-<div class="h-screen w-[25%] bg-gray-700 absolute top-0 left-0" ></div>
+<div id="vnav" class="h-screen w-[25%] bg-gray-700 absolute top-0 left-0" ></div>
 </div>
 </body>
 </html>
