--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashbourd</title>
+    <script src="dashbourd.js" defer></script>
     <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../src/output.css">
+<link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
     <div class="relative">
