--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="relative">
-<div id="hnav" class="h-16 w-full bg-gray-700 text-white flex justify-between leading-16 items-center px-4">
+<div id="hnav" class=" float-end h-16 w-full bg-gray-700 text-white flex justify-between leading-16 items-center px-4">
     <h2>Sharifi high School</h2>
 <i id="bars" class="fas fa-bars"></i>
 </div>
