--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -13,7 +13,7 @@
 <div id="hnav" class=" float-end h-16 w-full bg-gray-700 text-white flex justify-between leading-16 items-center px-4">
     <h2>Sharifi high School</h2>
 <i id="bars" class="fas fa-bars"></i>
-<i id="times" class="fas fa-times"></i>
+<i style="display: none;"     id="close" class="fas fa-times "></i>
 </div>
 <div id="vnav" class=" hidden h-screen w-[25%] bg-gray-700 absolute top-0 left-0" ></div>
 </div>
