--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -15,7 +15,14 @@
 <i id="bars" class="fas fa-bars"></i>
 <i style="display: none;"     id="close" class="fas fa-times "></i>
 </div>
-<div id="vnav" class=" hidden h-screen w-[25%] bg-gray-700 absolute top-0 left-0" ></div>
+<div id="vnav" class=" hidden h-screen w-[25%] bg-gray-700 absolute top-0 left-0" >
+    <ul>
+        <li><a href="">Classes</a></li>
+        <li><a href="">Students</a></li>
+        <li><a href="">Registered Students</a></li>
+        <li><a href="">Unregistered students</a></li>
+    </ul>
+</div>
 </div>
 </body>
 </html>
