--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -15,9 +15,11 @@
 <i id="bars" class="fas fa-bars"></i>
 <i style="display: none;"     id="close" class="fas fa-times "></i>
 </div>
-<div id="vnav" class=" hidden h-screen w-[25%] bg-gray-700 absolute top-0 left-0" >
-    <ul>
-        <li><a href="">Classes</a></li>
+<div id="vnav" class=" hidden h-screen w-[25%] bg-gray-700 absolute top-0 left-0 text-white" >
+    <ul class="flex flex-col gap-[15px]">
+        <li><a href="">
+            <i class="fa-solid fa-people"></i>
+            Classes</a></li>
         <li><a href="">Students</a></li>
         <li><a href="">Registered Students</a></li>
         <li><a href="">Unregistered students</a></li>
