--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -16,13 +16,19 @@
 <i style="display: none;"     id="close" class="fas fa-times "></i>
 </div>
 <div id="vnav" class=" hidden h-screen w-[25%] bg-gray-700 absolute top-0 left-0 text-white" >
-    <ul class="flex flex-col gap-[15px]">
+    <ul class="flex flex-col gap-[15px] px-[10px]">
         <li><a href="">
-            <i class="fa-solid fa-people"></i>
+            <i class="fa-solid fa-school"></i>
             Classes</a></li>
-        <li><a href="">Students</a></li>
-        <li><a href="">Registered Students</a></li>
-        <li><a href="">Unregistered students</a></li>
+        <li><a href="">
+            <i class="fa-solid fa-users"></i>
+            Students</a></li>
+        <li><a href="">
+            <i class="fa-solid fa-id-card"></i>
+            Registered Students</a></li>
+        <li><a href="">
+            <i class="fa-solid fa-id-card"></i>
+            Unregistered students</a></li>
     </ul>
 </div>
 </div>
