--- a/public/login-page.html
+++ b/public/login-page.html
@@ -19,7 +19,7 @@
            
             <div class=" flex items-between justify-between text-white ">
                 <label> <input type="checkbox" class="ml-[20px]"> Remember me ! </label>
-                <a href="#" class="mr-[20px]"> Forgot password? </a>
+                <a href="#" class="mr-[20px] p-auto"> Forgot password? </a>
             </div>
             <button class="text-black bg-white  w-[80%] rounded-[30px] mx-auto font-bold py-1">
                 <a href="dashbourd.html">
