--- a/public/login-page.html
+++ b/public/login-page.html
@@ -17,7 +17,7 @@
            
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px]" placeholder="Password ">
            
-            <div class=" flex items-between justify-between text-white ">
+            <div class=" flex items-between justify-between text-white text-center ">
                 <label> <input type="checkbox" class="ml-[20px]"> Remember me ! </label>
                 <a href="#" class="mr-[20px] p-auto"> Forgot password? </a>
             </div>
