--- a/public/login-page.html
+++ b/public/login-page.html
@@ -18,7 +18,7 @@
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px]" placeholder="Password ">
            
             <div class=" flex items-between justify-between text-white text-center ">
-                <label> <input type="checkbox" class="ml-[20px]"> Remember me ! </label>
+                <label> <input type="checkbox" class="ml-[20px] text-xl"> Remember me ! </label>
                 <a href="#" class="mr-[20px] p-auto"> Forgot password? </a>
             </div>
             <button class="text-black bg-white  w-[80%] rounded-[30px] mx-auto font-bold py-1">
