--- a/public/login-page.html
+++ b/public/login-page.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../src/output.css">
     <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-black">
 </html>
-<div class=" h-screen w-full sm:h-[100px] sm:w-[100px] bg-[url(../public/img/photo.jpg.jpg)] bg-cover bg-right sm:bg-left  flex  bg-white items-center justify-center ">
-        <form action="" class="w-[30%] sm:w-full sm:h-[100%] h-[500px] py-2  flex  sm:flex-row flex-col gap-6  bg-login  rounded-[15px] py-[5%]  font-bold  ">
-            <h1 class="text-center text-white text-4xl font-bold sm:text-xl ">Login</h1>
+<div class="  h-screen w-full bg-[url(../public/img/picture.jpg)] bg-cover bg-right   flex  bg-white items-center justify-center ">
+        <form action="" class="w-[30%]   h-[500px] py-2  flex  flex-col gap-6  bg-login  rounded-[15px] py-[5%]  font-bold  ">
+            <h1 class="text-center text-white text-4xl font-bold ">Login</h1>
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px] " placeholder="Email">
 
            
@@ -28,6 +28,7 @@
             <h5>Don't have an account ? </h5>
             <a href="#" class="mr-[20%] ml-[15px] text-[20px]" >Register</a>
         </div>
+        <div class="flex "></div>
     </for>
     </div>
 </body>
