--- a/public/login-page.html
+++ b/public/login-page.html
@@ -28,8 +28,7 @@
             <h5>Don't have an account ? </h5>
             <a href="#" class="mr-[20%] ml-[15px] text-[20px]" >Register</a>
         </div>
-        <div class="flex "></div>
-    </for>
+    </form>
     </div>
 </body>
 </html>
