--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -9,7 +9,7 @@
      <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
  </head>
  <body class="bg-gray-100">
-     <div class="w-full h-screen bg-svg-pattern relative">
+     <div class="w-full h-screen bg-svg-pattern bg-center bg-cover relative">
          <!-- horizontal nav -->
          <div id="hnav" class=" transition-all duration-500 ease-linear float-right h-20 leading-20 w-full bg-white flex justify-between px-3 ">
              <div class="flex justify-center items-center space-x-3 font-bold">
