--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -9,13 +9,13 @@
      <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
  </head>
  <body class="bg-gray-100">
-     <div class="w-full h-screen bg-svg-pattern bg-center bg-cover relative">
+     <div class="w-full h-screen bg-svg-picture  bg-center bg-cover relative">
          <!-- horizontal nav -->
          <div id="hnav" class=" transition-all duration-500 ease-linear float-right h-20 leading-20 w-full bg-white flex justify-between px-3 ">
              <div class="flex justify-center items-center space-x-3 font-bold">
                  <h3>Sharifi High School</h3>
              </div>
-             <div class="flex  justify-center items-center space-x-4 ">
+             <div class="flex  justify-center items-center space-x-4  font-bold">
                  <img class="h-14 w-14 rounded-full" src="./img/zahra.jpg" >
                  <h4>Zahra Ahmadi</h4>
                  <i class="fas fa-bell"></i>
@@ -24,17 +24,17 @@
              </div>
          </div>
          <!-- vnav -->
-         <div id="vnav" class=" transition-all duration-400 ease-linear absolute top-0 hidden py-2 lef-0 w-[20%] bg-white h-screen overflow-y-scroll">
-            <div class="w-full flex flex-col justify-center items-center font-bold mx-auto">
-                     <img class="h-14 w-14 rounded-full" src="./img/zahra.jpg" alt="">
+         <div id="vnav" class="  flex flex-col transition-all duration-400 ease-linear absolute top-0 hidden py-2 lef-0 w-[20%] bg-white h-screen overflow-y-scroll">
+           <div class=" w-full flex flex-col font-extrabold justify-center items-center py-3.5">
+                     <img class="h-14 w-14 rounded-full" src="./img/zahra.jpg" alt=""
                  <h3>Zahra Ahmadi</h3>
-             </div>
-             <ul class="flex justify-start flex-col py-2.5">
-              <li><a href=""><i class="fas fa-bars  px-3 "></i><span>Dashboard</span></a></li>
-              <li><a href=""><i class="fas fa-users   px-3 "></i><span>Dashboard</span></a></li>
-              <li><a href=""><i class="fas fa-user   px-3"></i><span>Dashboard</span></a></li>
+                </div>
+             <ul class=" flex flex-col items-center justify-start py-2.5">
+              <li><a href=""><i class="fas fa-bars px-4 "></i><span>Dashboard</span></a></li>
+              <li><a href=""><i class="fas fa-user  px-4 "></i><span>user</span></a></li>
+              <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
-          </div>
+            </div>
      </div>
  </body>
              
