--- a/public/login-page.html
+++ b/public/login-page.html
@@ -10,7 +10,7 @@
 <body class="bg-black">
 </html>
 <div class="  h-screen w-full bg-[url(../public/img/picture.jpg)] bg-cover bg-right   flex  bg-white items-center justify-center ">
-        <form action="" class="w-[30%]   h-[500px] py-2  flex  flex-col gap-6  bg-login  rounded-[15px] py-[5%]  font-bold  ">
+        <form action="" class="w-[30%]   h-[500px] py-[5%] flex  flex-col gap-6  bg-login  rounded-[15px]  font-bold  ">
             <h1 class="text-center text-white text-4xl font-bold ">Login</h1>
             <input type="text" class="border-2 border-white text-white w-[80%] mx-auto rounded-[30px] pl-[12px] text-[25px] " placeholder="Email">
 
