--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -35,6 +35,26 @@
               <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
             </div>
+            <table class="text-white">
+                <tr>
+                 <th>Number</th>
+                  <th>Name</th>  
+                  <th>L.Name</th>  
+                  <th>Class</th>  
+                  <th>Rajester</th>  
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+            </table>
      </div>
  </body>
              
