changes in tailwind

--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -44,11 +44,11 @@
                   <th>Rajester</th>  
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>1</td>
+                    <td>Zahra</td>
+                    <td>Ahmadi</td>
+                    <td>Js</td>
+                    <td>True</td>
                 </tr>
                 <tr></tr>
                 <tr></tr>
