--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -50,6 +50,7 @@
                     <td>Js</td>
                     <td>True</td>
                 </tr>
+             
                 <tr>
                     <td>2</td>
                     <td>Zahra</td>
@@ -75,6 +76,55 @@
                     <td>5</td>
                     <td>Mubarika</td>
                     <td>Atayee</td>
+                    <td>Js</td>
+                    <td>True</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Muzhgan</td>
+                    <td>Akbari</td>
+                    <td>Js</td>
+                    <td>False</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Shakiba</td>
+                    <td>Zahidi</td>
+                    <td>Js</td>
+                    <td>true</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Fahima</td>
+                    <td>Maqsudi</td>
+                    <td>Js</td>
+                    <td>False</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Arifa</td>
+                    <td>Mohsini</td>
+                    <td>Js</td>
+                    <td>True</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Sharifa</td>
+                    <td>hassani</td>
+                    <td>Js</td>
+                    <td>False</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>Nazdana</td>
+                    <td>Qurbani</td>
+                    <td>Js</td>
+                    <td>True</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Nazifa</td>
+                    <td>Sharifi</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
