changes in tailwindcss

--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -128,6 +128,35 @@
                     <td>Js</td>
                     <td>True</td>
                 </tr>
+                <tr>
+                    <td>13</td>
+                    <td>Rahila</td>
+                    <td>Qambari</td>
+                    <td>Js</td>
+                    <td>True</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>Kubra</td>
+                    <td>Nazari</td>
+                    <td>Js</td>
+                    <td>False</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>Atifa</td>
+                    <td>Khalili</td>
+                    <td>Js</td>
+                    <td>True</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>Frishta</td>
+                    <td>Khalili</td>
+                    <td>Js</td>
+                    <td>True</td>
+                </tr>
+              
             </table>
      </div>
  </body>
