--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -35,15 +35,15 @@
               <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
             </div>
-            <table class="text-white">
-                <tr>
-                 <th>Number</th>
-                  <th>Name</th>  
-                  <th>L.Name</th>  
-                  <th>Class</th>  
-                  <th>Rajester</th>  
+            <table class="text-white flex justify-self-end items-center w-[80%] h-screen text-center  mx-10">
+                <tr class="border-b-1">
+                  <th  class="px-[70px]">Number</th>
+                  <th  class="px-[70px]">Name</th>  
+                  <th  class="px-[70px]">L.Name</th>  
+                  <th  class="px-[70px]">Class</th>  
+                  <th  class="px-[70px]">Rajester</th>  
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>1</td>
                     <td>Zahra</td>
                     <td>Ahmadi</td>
@@ -51,105 +51,105 @@
                     <td>True</td>
                 </tr>
              
-                <tr>
+                <tr class="border-b-1">
                     <td>2</td>
                     <td>Zahra</td>
                     <td>Askari</td>
                     <td>Js</td>
                     <td>false</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>3</td>
                     <td>Zahra</td>
                     <td>Hassani</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>4</td>
                     <td>Fatima</td>
                     <td>Rezayee</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>5</td>
                     <td>Mubarika</td>
                     <td>Atayee</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>6</td>
                     <td>Muzhgan</td>
                     <td>Akbari</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>7</td>
                     <td>Shakiba</td>
                     <td>Zahidi</td>
                     <td>Js</td>
                     <td>true</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>8</td>
                     <td>Fahima</td>
                     <td>Maqsudi</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>9</td>
                     <td>Arifa</td>
                     <td>Mohsini</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>10</td>
                     <td>Sharifa</td>
                     <td>hassani</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>11</td>
                     <td>Nazdana</td>
                     <td>Qurbani</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>12</td>
                     <td>Nazifa</td>
                     <td>Sharifi</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>13</td>
                     <td>Rahila</td>
                     <td>Qambari</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>14</td>
                     <td>Kubra</td>
                     <td>Nazari</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>15</td>
                     <td>Atifa</td>
                     <td>Khalili</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr>
+                <tr class="border-b-1">
                     <td>16</td>
                     <td>Frishta</td>
                     <td>Khalili</td>
