added in tailwind

--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -35,13 +35,13 @@
               <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
             </div>
-            <table class="text-white flex justify-self-end items-center w-[80%] h-screen text-center  mx-10">
-                <tr class="border-b-1">
-                  <th  class="px-[70px]">Number</th>
-                  <th  class="px-[70px]">Name</th>  
-                  <th  class="px-[70px]">L.Name</th>  
-                  <th  class="px-[70px]">Class</th>  
-                  <th  class="px-[70px]">Rajester</th>  
+            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16">
+                <tr class="border-b-1 ">
+                  <th  class="px-[40px]">Number</th>
+                  <th  class="px-[40px]">Name</th>  
+                  <th  class="px-[40px]">L.Name</th>  
+                  <th  class="px-[40px]">Class</th>  
+                  <th  class="px-[40px]">Rajester</th>  
                 </tr>
                 <tr class="border-b-1">
                     <td>1</td>
@@ -149,7 +149,7 @@
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 ">
                     <td>16</td>
                     <td>Frishta</td>
                     <td>Khalili</td>
