changes in taiwind

--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -26,7 +26,7 @@
          <!-- vnav -->
          <div id="vnav" class="  flex flex-col transition-all duration-400 ease-linear absolute top-0 hidden py-2 lef-0 w-[20%] bg-white h-screen overflow-y-scroll">
            <div class=" w-full flex flex-col font-extrabold justify-center items-center py-3.5">
-                     <img class="h-14 w-14 rounded-full" src="./img/zahra.jpg" alt=""
+                     <img class="h-14 w-14 rounded-full" src="./img/zahra.jpg" alt="">
                  <h3>Zahra Ahmadi</h3>
                 </div>
              <ul class=" flex flex-col items-center justify-start py-2.5">
@@ -35,7 +35,7 @@
               <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
             </div>
-            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16">
+            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16 ">
                 <tr class="border-b-1 ">
                   <th  class="px-[40px]">Number</th>
                   <th  class="px-[40px]">Name</th>  
@@ -43,7 +43,7 @@
                   <th  class="px-[40px]">Class</th>  
                   <th  class="px-[40px]">Rajester</th>  
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-l-2">
                     <td>1</td>
                     <td>Zahra</td>
                     <td>Ahmadi</td>
@@ -51,14 +51,14 @@
                     <td>True</td>
                 </tr>
              
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-l-2">
                     <td>2</td>
                     <td>Zahra</td>
                     <td>Askari</td>
                     <td>Js</td>
                     <td>false</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-l-2">
                     <td>3</td>
                     <td>Zahra</td>
                     <td>Hassani</td>
