--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -65,91 +65,91 @@
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>4</td>
                     <td>Fatima</td>
                     <td>Rezayee</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>5</td>
                     <td>Mubarika</td>
                     <td>Atayee</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>6</td>
                     <td>Muzhgan</td>
                     <td>Akbari</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>7</td>
                     <td>Shakiba</td>
                     <td>Zahidi</td>
                     <td>Js</td>
                     <td>true</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>8</td>
                     <td>Fahima</td>
                     <td>Maqsudi</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>9</td>
                     <td>Arifa</td>
                     <td>Mohsini</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>10</td>
                     <td>Sharifa</td>
                     <td>hassani</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>11</td>
                     <td>Nazdana</td>
                     <td>Qurbani</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>12</td>
                     <td>Nazifa</td>
                     <td>Sharifi</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>13</td>
                     <td>Rahila</td>
                     <td>Qambari</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>14</td>
                     <td>Kubra</td>
                     <td>Nazari</td>
                     <td>Js</td>
                     <td>False</td>
                 </tr>
-                <tr class="border-b-1">
+                <tr class="border-b-1 border-r-2 border-l-2 ">
                     <td>15</td>
                     <td>Atifa</td>
                     <td>Khalili</td>
                     <td>Js</td>
                     <td>True</td>
                 </tr>
-                <tr class="border-b-1 ">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>16</td>
                     <td>Frishta</td>
                     <td>Khalili</td>
