changes in tailwind

--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -43,7 +43,7 @@
                   <th  class="px-[40px]">Class</th>  
                   <th  class="px-[40px]">Rajester</th>  
                 </tr>
-                <tr class="border-b-1 border-l-2">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>1</td>
                     <td>Zahra</td>
                     <td>Ahmadi</td>
@@ -51,14 +51,14 @@
                     <td>True</td>
                 </tr>
              
-                <tr class="border-b-1 border-l-2">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>2</td>
                     <td>Zahra</td>
                     <td>Askari</td>
                     <td>Js</td>
                     <td>false</td>
                 </tr>
-                <tr class="border-b-1 border-l-2">
+                <tr class="border-b-1 border-r-2 border-l-2">
                     <td>3</td>
                     <td>Zahra</td>
                     <td>Hassani</td>
