--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -35,7 +35,7 @@
               <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
             </div>
-            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16 ">
+            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16 animate-pulse ">
                 <tr class="border-b-1 ">
                   <th  class="px-[40px]">Number</th>
                   <th  class="px-[40px]">Name</th>  
