CHanges in tailwind

--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -36,12 +36,12 @@
              </ul>
             </div>
             <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16 animate-pulse ">
-                <tr class="border-b-1 ">
-                  <th  class="px-[40px]">Number</th>
-                  <th  class="px-[40px]">Name</th>  
-                  <th  class="px-[40px]">L.Name</th>  
-                  <th  class="px-[40px]">Class</th>  
-                  <th  class="px-[40px]">Rajester</th>  
+                <tr class="border-b-1  font-extrabold">
+                  <th  class="px-[40px] font-extrabold">Number</th>
+                  <th  class="px-[40px] font-extrabold">Name</th>  
+                  <th  class="px-[40px] font-extrabold">L.Name</th>  
+                  <th  class="px-[40px] font-extrabold">Class</th>  
+                  <th  class="px-[40px] font-extrabold">Rajester</th>  
                 </tr>
                 <tr class="border-b-1 border-r-2 border-l-2">
                     <td>1</td>
