--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="../src/output.css">
      <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
  </head>
- <body class="bg-gray-100">
+ <body class="bg-gray-100 font-mono">
      <div class="w-full h-screen bg-svg-picture  bg-center bg-cover relative">
          <!-- horizontal nav -->
          <div id="hnav" class=" transition-all duration-500 ease-linear float-right h-20 leading-20 w-full bg-white flex justify-between px-3 ">
